whoami-svc1/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc1
  labels:
    app: whoami-svc1
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: whoami-svc1
